--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -1,19 +1,114 @@
+// .menu {
+//   padding-top: 20vh;
+//   .menu_p {
+//     color: #dc780b;
+//     text-align: center;
+//     font-family: Roboto;
+//     font-size: 16px;
+//     font-weight: 500;
+//     line-height: 24px;
+//     letter-spacing: 3.2px;
+//     text-transform: uppercase;
+//   }
+//   p {
+//     text-align: center;
+//   }
+//   h3 {
+//     text-align: center;
+//   }
+//   .menu_col {
+//     border-radius: 75px 10px 10px 10px;
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//     background: #fff;
+//     .card-img {
+//       img {
+//         overflow: hidden;
+//         width: 458px;
+//         height: 306px;
+//         flex-shrink: 0;
+//         flex-shrink: 0;
+//       }
+//     }
+//   }
+// }
+
 .menu {
-    padding-top: 20vh;
-  .menu_p {
-    color: #dc780b;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 3.2px;
-    text-transform: uppercase;
+  width: 100%;
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap !important;
+}
+.menu_box {
+  display: flex !important;
+  flex-wrap: wrap;
+  justify-content: center !important;
+}
+
+.menu-box .menu_box {
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  grid-gap: 10px;
+}
+
+.menu .menu_box .menu_card {
+  width: 300px;
+  height: 420px;
+  margin: auto;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  .menu_info {
+    position: relative;
+    height: 50%;
+    .priceandbtn {
+      margin: 20px;
+      position: absolute;
+      width: 85%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
-  p {
-    text-align: center;
-  }
-  h3 {
-    text-align: center;
-  }
+}
+
+.menu .menu_box .menu_card .menu_image {
+  width: 300px;
+  height: 245px;
+  margin: 0 auto;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.menu .menu_box .menu_card .menu_image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: 0.3s;
+  border-radius: 10px;
+}
+
+.menu .menu_box .menu_card .menu_image:hover img {
+  transform: scale(1.1);
+}
+
+.menu .menu_box .menu_card .menu_info h2 {
+  width: 60%;
+  text-align: center;
+  margin: 10px auto 10px auto;
+  font-size: 25px;
+  color: #ff511c;
+}
+
+.menu .menu_box .menu_card .menu_info p {
+  text-align: center;
+  margin-top: 8px;
+  line-height: 21px;
+}
+
+.menu .menu_box .menu_card .menu_info h3 {
+  text-align: center;
+  margin-top: 10px;
 }
