--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -5,6 +5,7 @@
   align-items: center;
   position: fixed;
   width: 100%;
+  z-index: 999;
   .navbar_logo {
     width: 45px;
     cursor: pointer;
