--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Philosopher", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
