--- a/src/sass/_navbarcart.scss
+++ b/src/sass/_navbarcart.scss
@@ -5,6 +5,22 @@
   }
 }
 
+.bag_btn {
+  width: 60px;
+}
+
+// @media (min-width: 768px) {
+//   .bag_btn {
+//     display: none;
+//   }
+// }
+
+@media (min-width: 992px) {
+  .bag_btn {
+    display: none;
+  }
+}
+
 .buy_now {
   border: 1px solid #dc780b;
   background-color: #dc780b;
