--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -16,6 +16,9 @@
   ul {
     li {
       padding-left: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       a {
         transition: 0.2s;
         color: black;
