--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,101 +1,95 @@
-.footer {
+footer {
+  bottom: 0;
+  background: rgb(46, 46, 46);
+  color: white;
   width: 100%;
-  background: #10182f;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
-.footer .footer-row {
+
+footer .top {
+  padding: 2rem 0;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 3.5rem;
-  padding: 60px;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
-.footer-row .footer-col h4 {
-  color: #fff;
-  font-size: 1.2rem;
-  font-weight: 400;
+
+footer .top .pages {
+  display: flex;
+  flex-direction: row;
 }
-.footer-col .links {
-  margin-top: 20px;
+
+footer .top .pages ul {
+  color: #dc780b;
+  margin: 20px;
 }
-.footer-col .links li {
+
+footer .top .pages ul li {
   list-style: none;
+  margin: 5px;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+}
+
+footer .newsletter h3 {
+  color: #dc780b;
   margin-bottom: 10px;
 }
-.footer-col .links li a {
-  text-decoration: none;
-  color: #bfbfbf;
-}
-.footer-col .links li a:hover {
-  color: #fff;
-}
-.footer-col p {
-  margin: 20px 0;
-  color: #bfbfbf;
-  max-width: 300px;
-}
-.footer-col form {
+footer .newsletter form {
   display: flex;
-  gap: 5px;
+  align-items: center;
+  justify-content: center;
 }
-.footer-col input {
-  height: 40px;
-  border-radius: 6px;
-  background: none;
-  width: 100%;
-  outline: none;
-  border: 1px solid #7489c6;
-  caret-color: #fff;
-  color: #fff;
-  padding-left: 10px;
+
+iframe {
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
 }
-.footer-col input::placeholder {
-  color: #ccc;
-}
-.footer-col form button {
-  background: #fff;
-  outline: none;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: 500;
-  transition: 0.2s ease;
-}
-.footer-col form button:hover {
-  background: #cecccc;
-}
-.footer-col .icons {
-  display: flex;
-  margin-top: 30px;
-  gap: 30px;
-  cursor: pointer;
-}
-.footer-col .icons i {
-  color: #afb6c7;
-}
-.footer-col .icons i:hover {
-  color: #fff;
-}
-@media (max-width: 768px) {
-  .footer {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    transform: none;
-    width: 100%;
-    border-radius: 0;
+
+@media screen and (max-width: 768px) {
+  footer .top {
+    flex-direction: column;
   }
-  .footer .footer-row {
-    padding: 20px;
-    gap: 1rem;
+  footer .top .newsletter {
+    padding-top: 1rem;
   }
-  .footer-col form {
-    display: block;
+  footer .top .pages ul {
+    margin: 10px;
   }
-  .footer-col form :where(input, button) {
-    width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  footer .top .pages {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
-  .footer-col form button {
-    margin: 10px 0 0 0;
+
+  footer .info {
+    flex-direction: column;
+  }
+
+  footer .info > .copyright {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  footer .top .pages {
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  footer .info .legal {
+    justify-content: center;
+  }
+
+  footer .info .legal a {
+    margin: 0;
+    text-align: center;
   }
 }
